# react-room-template

backend/: app.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: ConnectToRoom.js  CreateRoom.js  HomePage.js  RoomDetails.js
